fix: enable debug log only if trace is enabled for specific components

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/crd-upgrade-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/crd-upgrade-job.yaml
@@ -36,5 +36,8 @@ spec:
             value: "true"
           - name: CONVERSION_WEBHOOKS
             value: "false"
-        
+          {{- if .Values.developer.extraOpts }}
+          - name: APP_OPTS
+            value: '{{ range .Values.developer.extraOpts }}{{ . }} {{ end }}'
+          {{- end }}
       restartPolicy: OnFailure
