--- a/stackgres-k8s/src/api-web/src/main/resources/application.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/application.properties
@@ -16,11 +16,16 @@ quarkus.native.additional-build-args=\
   -Dorg.jooq.no-logo=true
 
 # Logger Production
-quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
-quarkus.log.console.level=DEBUG
+quarkus.log.level=INFO
 quarkus.log.min-level=TRACE
-quarkus.log.category."io.stackgres".level=DEBUG
-quarkus.log.category."io.quarkus".level=INFO
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
+
+# Logger Development
+%dev.quarkus.log.level=INFO
+%dev.quarkus.log.min-level=TRACE
+%dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{5.}] (%t) %s%e%n
+%dev.quarkus.log.category."io.stackgres".level=DEBUG
+%dev.quarkus.log.category."io.quarkus".level=INFO
 
 # SSL configuration
 quarkus.ssl.native=true
