--- a/stackgres-k8s/src/distributedlogs-controller/src/main/resources/application.properties
+++ b/stackgres-k8s/src/distributedlogs-controller/src/main/resources/application.properties
@@ -15,16 +15,14 @@ quarkus.native.additional-build-args=\
   -H:IncludeResources=templates/.*
 
 # Logger Production
+quarkus.log.level=INFO
+quarkus.log.min-level=TRACE
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
-quarkus.log.console.level=DEBUG
-quarkus.log.console.min-level=TRACE
-quarkus.log.category."io.stackgres".level=DEBUG
-quarkus.log.category."io.quarkus".level=INFO
 
 # Logger Development
+%dev.quarkus.log.level=INFO
+%dev.quarkus.log.min-level=TRACE
 %dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{4.}] (%t) %s%e%n
-%dev.quarkus.log.console.level=DEBUG
-%dev.quarkus.log.console.min-level=TRACE
 %dev.quarkus.log.category."io.stackgres".level=DEBUG
 %dev.quarkus.log.category."io.quarkus".level=INFO
 
