--- a/stackgres-k8s/src/jobs/src/main/resources/application.properties
+++ b/stackgres-k8s/src/jobs/src/main/resources/application.properties
@@ -1,11 +1,10 @@
+#
+# Copyright (C) 2019 OnGres, Inc.
+# SPDX-License-Identifier: AGPL-3.0-or-later
+#
+
 quarkus.package.type=legacy-jar
 quarkus.banner.enabled=false
-
-# StackGres Configuration
-stackgres.operatorName=${stackgres.operatorName}
-stackgres.operatorNamespace=${stackgres.operatorNamespace}
-stackgres.conversionWebhooks=${stackgres.conversionWebhooks}
-stackgres.crdUpgrade=${stackgres.crdUpgrade}
 
 # Quarkus Native Image
 quarkus.native.additional-build-args=\
@@ -14,16 +13,19 @@ quarkus.native.additional-build-args=\
   -H:IncludeResources=.*/*.yaml
 
 # Logger Production
+quarkus.log.level=INFO
+quarkus.log.min-level=TRACE
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
-quarkus.log.console.level=DEBUG
-quarkus.log.console.min-level=TRACE
-quarkus.log.category."io.stackgres".level=DEBUG
-quarkus.log.category."io.quarkus".level=INFO
 
 # Logger Development
+%dev.quarkus.log.level=INFO
+%dev.quarkus.log.min-level=TRACE
 %dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{4.}] (%t) %s%e%n
-%dev.quarkus.log.console.level=DEBUG
-%dev.quarkus.log.console.min-level=TRACE
 %dev.quarkus.log.category."io.stackgres".level=DEBUG
 %dev.quarkus.log.category."io.quarkus".level=INFO
-  
+
+# StackGres Configuration
+stackgres.operatorName=${stackgres.operatorName}
+stackgres.operatorNamespace=${stackgres.operatorNamespace}
+stackgres.conversionWebhooks=${stackgres.conversionWebhooks}
+stackgres.crdUpgrade=${stackgres.crdUpgrade}
