--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
@@ -49,6 +49,10 @@ spec:
           - name: RESTAPI_SHOW_STACK_TRACES
             value: "{{ .Values.developer.showStackTraces }}"
           {{- end }}
+          {{- if .Values.developer.extraOpts }}
+          - name: APP_OPTS
+            value: '{{ range .Values.developer.extraOpts }}{{ . }} {{ end }}'
+          {{- end }}
           {{- if .Values.developer.enableJvmDebug }}
           - name: DEBUG_RESTAPI
             value: "{{ .Values.developer.enableJvmDebug }}"
