--- a/stackgres-k8s/src/api-web/pom.xml
+++ b/stackgres-k8s/src/api-web/pom.xml
@@ -227,7 +227,7 @@
                       <name>ongres-jvm-builder</name>
                       <build>
                         <cleanup>remove</cleanup>
-                        <from>${buildah.image}</from>
+                        <from>${docker.image}</from>
                         <assembly>
                           <targetDir>/api-web</targetDir>
                           <inline>
@@ -249,7 +249,7 @@
                         <entrypoint>
                           <arg>/bin/sh</arg>
                           <arg>-ex</arg>
-                          <arg>/api-web/src/main/buildah/build-image-jvm.sh</arg>
+                          <arg>/api-web/src/main/docker/build-image-jvm.sh</arg>
                         </entrypoint>
                         <wait>
                           <time>300000</time>
@@ -308,7 +308,7 @@
                       <name>restapi-native-builder</name>
                       <build>
                         <cleanup>remove</cleanup>
-                        <from>${buildah.image}</from>
+                        <from>${docker.image}</from>
                         <assembly>
                           <targetDir>/api-web</targetDir>
                           <inline>
@@ -330,7 +330,7 @@
                         <entrypoint>
                           <arg>/bin/sh</arg>
                           <arg>-ex</arg>
-                          <arg>/api-web/src/main/buildah/build-image-native.sh</arg>
+                          <arg>/api-web/src/main/docker/build-image-native.sh</arg>
                         </entrypoint>
                         <wait>
                           <time>600000</time>
