--- a/stackgres-k8s/src/api-web/src/main/docker/Dockerfile.jvm
+++ b/stackgres-k8s/src/api-web/src/main/docker/Dockerfile.jvm
@@ -4,7 +4,7 @@ FROM "$BASE_IMAGE"
   WORKDIR '/app/'
   COPY 'target/stackgres-restapi-runner.jar' '/app/stackgres-restapi.jar'
   COPY 'target/lib/' '/app/lib/'
-  COPY 'src/main/docker/stackgres-restapi.sh' '/app/stackgres-restapi.sh'
+  COPY 'src/main/docker/stackgres-restapi.jvm.sh' '/app/stackgres-restapi.sh'
   RUN chown jboss:jboss '/app/' -R
   RUN chmod 775 '/home/jboss' -R
   RUN chmod 775 '/app' -R
