--- a/stackgres-k8s/src/cluster-controller/pom.xml
+++ b/stackgres-k8s/src/cluster-controller/pom.xml
@@ -177,7 +177,7 @@
                       <name>ongres-jvm-builder</name>
                       <build>
                         <cleanup>remove</cleanup>
-                        <from>${buildah.image}</from>
+                        <from>${docker.image}</from>
                         <assembly>
                           <targetDir>/cluster-controller</targetDir>
                           <inline>
@@ -199,7 +199,7 @@
                         <entrypoint>
                           <arg>/bin/sh</arg>
                           <arg>-ex</arg>
-                          <arg>/cluster-controller/src/main/buildah/build-image-jvm.sh</arg>
+                          <arg>/cluster-controller/src/main/docker/build-image-jvm.sh</arg>
                         </entrypoint>
                         <wait>
                           <time>300000</time>
@@ -258,7 +258,7 @@
                       <name>cluster-controller-native-builder</name>
                       <build>
                         <cleanup>remove</cleanup>
-                        <from>${buildah.image}</from>
+                        <from>${docker.image}</from>
                         <assembly>
                           <targetDir>/cluster-controller</targetDir>
                           <inline>
@@ -280,7 +280,7 @@
                         <entrypoint>
                           <arg>/bin/sh</arg>
                           <arg>-ex</arg>
-                          <arg>/cluster-controller/src/main/buildah/build-image-native.sh</arg>
+                          <arg>/cluster-controller/src/main/docker/build-image-native.sh</arg>
                         </entrypoint>
                         <wait>
                           <time>600000</time>
