--- a/stackgres-k8s/src/jobs/src/main/docker/Dockerfile.jvm
+++ b/stackgres-k8s/src/jobs/src/main/docker/Dockerfile.jvm
@@ -4,7 +4,7 @@ FROM "$BASE_IMAGE"
   WORKDIR '/app/'
   COPY 'target/stackgres-jobs-runner.jar' '/app/stackgres-jobs.jar'
   COPY 'target/lib/' '/app/lib/'
-  COPY 'src/main/docker/stackgres-jobs.sh' '/app/stackgres-jobs.sh'
+  COPY 'src/main/docker/stackgres-jobs.jvm.sh' '/app/stackgres-jobs.sh'
   RUN chown jboss:jboss '/app/' -R
   RUN chmod 775 '/home/jboss' -R
   RUN chmod 775 '/app' -R
