fix: Integration Test for Rest API login
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/stackgres-k8s/src/api-web/src/main/resources/application.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/application.properties
@@ -12,36 +12,34 @@ quarkus.native.additional-build-args=\
   -H:IncludeResources=.*/*.sh,\
   -H:IncludeResources=.*/*.sql,\
   -H:IncludeResources=.*/*.properties,\
-  -H:IncludeResources=.*/banner.txt
-
+  -H:IncludeResources=.*/banner.txt,\
+  -Dorg.jooq.no-logo=true
 
 # Logger Production
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.level=DEBUG
-quarkus.log.console.min-level=TRACE
+quarkus.log.min-level=TRACE
 quarkus.log.category."io.stackgres".level=DEBUG
 quarkus.log.category."io.quarkus".level=INFO
-
-# Logger Development
-%dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{5.}] (%t) %s%e%n
-%dev.quarkus.log.console.level=DEBUG
-%dev.quarkus.log.console.min-level=TRACE
-%dev.quarkus.log.category."io.stackgres".level=DEBUG
-%dev.quarkus.log.category."io.quarkus".level=INFO
 
 # SSL configuration
 quarkus.ssl.native=true
 
 # Authentication
 quarkus.smallrye-jwt.enabled=true
+smallrye.jwt.require.named-principal=true
 mp.jwt.verify.publickey.location=file:///etc/operator/certs/jwt-rsa.pub
 mp.jwt.verify.issuer=https://api.stackgres.io/auth
 smallrye.jwt.verify.aud=api-websecurity
-smallrye.jwt.require.named-principal=true
+
+smallrye.jwt.sign.key.location=file:///etc/operator/certs/jwt-rsa.key
+smallrye.jwt.new-token.issuer=https://api.stackgres.io/auth
+smallrye.jwt.new-token.audience=api-websecurity
+smallrye.jwt.new-token.lifespan=28800
 
 # Test Authentication
 %test.mp.jwt.verify.publickey.location=jwt/rsa_public.pem
-%test.quarkus.smallrye-jwt.enabled=true
+%test.smallrye.jwt.sign.key.location=jwt/rsa_private.key
 
 # StackGres Configuration
 stackgres.operatorName=${stackgres.operatorName}
@@ -57,6 +55,5 @@ stackgres.documentation.errorsPath=${stackgres.documentation.errorsPath}
 stackgres.authentication.secretName=${stackgres.authentication.secretName}
 
 # jOOQ
-org.jooq.no-logo=true
 quarkus.log.category."org.jooq.Constants".level=OFF
 quarkus.log.category."org.jooq.tools.LoggerListener".level=OFF
