--- a/stackgres-k8s/src/test-util/pom.xml
+++ b/stackgres-k8s/src/test-util/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <artifactId>stackgres-parent</artifactId>
     <groupId>io.stackgres</groupId>
-    <version>1.0.0-alpha2-SNAPSHOT</version>
+    <version>1.0.0-alpha2</version>
   </parent>
 
   <artifactId>stackgres-test-util</artifactId>
