--- a/stackgres-k8s/install/helm/stackgres-cluster/Chart.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: stackgres-cluster
-version: "1.0.0-alpha2"
+version: "1.0.0-beta1-SNAPSHOT"
 kubeVersion: "1.11.0-0 - 1.19.x-0"
 description: StackGres Cluster
 keyworkds:
@@ -19,5 +19,5 @@ maintainers:
     url: https://ongres.com
 engine: gotpl
 icon: https://assets.gitlab-static.net/uploads/-/system/project/avatar/12584701/logo-stackgres.png?width=64
-appVersion: "1.0.0-alpha2"
+appVersion: "1.0.0-beta1-SNAPSHOT"
 deprecated: false
