--- a/stackgres-k8s/src/pom.xml
+++ b/stackgres-k8s/src/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>io.stackgres</groupId>
   <artifactId>stackgres-parent</artifactId>
-  <version>1.0.0-alpha2</version>
+  <version>1.0.0-beta1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Parent POM</name>
 
