--- a/stackgres-k8s/install/helm/stackgres-operator/templates/init-service-account.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/init-service-account.yaml
@@ -52,7 +52,7 @@ spec:
       serviceAccountName: {{ .Release.Name }}-init
       containers:
       - name: "{{ .Release.Name }}-bootstrap"
-        image: "bitnami/kubectl:1.19.2"
+        image: "ongres/kubectl:v1.19.7-build-6.2"
         imagePullPolicy: "IfNotPresent"
         command:
           - "/bin/bash"
