--- a/stackgres-k8s/install/helm/stackgres-operator/templates/fix-deployments-selector-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/fix-deployments-selector-job.yaml
@@ -29,7 +29,7 @@ spec:
       serviceAccountName: {{ .Release.Name }}-init
       containers:
       - name: "{{ .Release.Name }}-fix-deployment-selector"
-        image: "bitnami/kubectl:1.19.2"
+        image: "ongres/kubectl:v1.19.7-build-6.2"
         imagePullPolicy: "IfNotPresent"
         command:
           - "/bin/bash"
