--- a/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values.properties
@@ -50,7 +50,7 @@ log_disconnections=on
 log_lock_waits=on
 log_temp_files=0
 log_autovacuum_min_duration=0
-log_line_prefix='%t [%p]: db=%d,user=%u,app=%a,client=%h '
+log_line_prefix=%t [%p]: db=%d,user=%u,app=%a,client=%h 
 log_statement=ddl
 track_activity_query_size=4096
 track_functions=pl
